apps/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  namespace: grafana
  labels:
    app: production
spec:
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
        - name: app
          image: docker.io/library/grafana:latest
          imagePullPolicy: Never
