apps/grafana/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: production
  namespace: grafana
  labels:
    app: production
spec:
  containers:
    - name: app
      image: docker.io/library/grafana:latest
      imagePullPolicy: Never
