apps/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: grafana
spec:
  type: NodePort
  
  selector:
    app: production
    
  ports:
  - name: http
    port: 4723 # GRAF
    targetPort: 8080
    nodePort: 30002
    protocol: TCP
