apps/grafana/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.bamilab.space`)
      kind: Rule
      services:
        - name: service
          port: 4723
